[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "reachpy"
version = "0.1.0"
description = "Python-native robotics framework built on ROS2"
requires-python = ">=3.10"
license = { text = "MIT" }

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "reachpy._reachpy_messages"