[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "reachpy"
version = "0.1.2a2"
description = "Python-native robotics framework built on ROS2"
requires-python = ">=3.10"
license = { text = "MIT" }
readme = "README.md"
authors = [
    { name = "ReachPy Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "reachpy._reachpy_messages"
# 1. Point to the specific crate that handles PyO3
manifest-path = "crates/reachpy-messages/Cargo.toml"
# 2. Package your workspace configurations and source directories into PyPI tarballs
include = [
    "Cargo.lock",
    "Cargo.toml",
    "crates/**/*"
]
